Fix disapeared flat checking